{
  "version": 4,
  "terraform_version": "1.11.4",
  "serial": 101,
  "lineage": "2db7cb6e-44bb-6258-adf9-ca9a7ac4be3a",
  "resources": [
    {
      "mode": "data",
      "type": "aws_security_group",
      "name": "db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:343218225856:security-group/sg-0009234c757b9e607",
            "description": "Allow PostgreSQL and Redis inbound traffic",
            "filter": [
              {
                "name": "group-name",
                "values": [
                  "allow-postgres-redis"
                ]
              },
              {
                "name": "vpc-id",
                "values": [
                  "vpc-0cfeb8699bca4d1fa"
                ]
              }
            ],
            "id": "sg-0009234c757b9e607",
            "name": "allow-postgres-redis",
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-0cfeb8699bca4d1fa"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_security_group",
      "name": "eks_nodes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:343218225856:security-group/sg-0d24e750cd2a8bfa9",
            "description": "Allow EKS nodes access",
            "filter": [
              {
                "name": "group-name",
                "values": [
                  "eks-nodes-sg"
                ]
              },
              {
                "name": "vpc-id",
                "values": [
                  "vpc-0cfeb8699bca4d1fa"
                ]
              }
            ],
            "id": "sg-0d24e750cd2a8bfa9",
            "name": "eks-nodes-sg",
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-0cfeb8699bca4d1fa"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "existing_default_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:343218225856:subnet/subnet-05c1fad9d625903e9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "available_ip_address_count": 4077,
            "cidr_block": "172.31.80.0/20",
            "default_for_az": true,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05c1fad9d625903e9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "343218225856",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "vpc_id": "vpc-0cfeb8699bca4d1fa"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_default_subnet",
      "name": "default_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:343218225856:subnet/subnet-007825bc01cb51536",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "172.31.16.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "existing_default_subnet": true,
            "force_destroy": false,
            "id": "subnet-007825bc01cb51536",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "343218225856",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0cfeb8699bca4d1fa"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_default_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:343218225856:vpc/vpc-0cfeb8699bca4d1fa",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.31.0.0/16",
            "default_network_acl_id": "acl-00d90b18516c225d5",
            "default_route_table_id": "rtb-024cbc4d91f84ab19",
            "default_security_group_id": "sg-0e22d6cbb1bc90b31",
            "dhcp_options_id": "dopt-0291657db82c7c92d",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "existing_default_vpc": true,
            "force_destroy": false,
            "id": "vpc-0cfeb8699bca4d1fa",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-024cbc4d91f84ab19",
            "owner_id": "343218225856"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_service",
      "name": "postgres_service",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "id": "default/db",
            "metadata": [
              {
                "generation": 0,
                "name": "db",
                "namespace": "default",
                "resource_version": "8496",
                "uid": "44d04efa-ddd5-4abb-a5d4-2bcf5e897c4a"
              }
            ],
            "spec": [
              {
                "allocate_load_balancer_node_ports": true,
                "cluster_ip": "10.100.219.99",
                "cluster_ips": [
                  "10.100.219.99"
                ],
                "health_check_node_port": 0,
                "internal_traffic_policy": "Cluster",
                "ip_families": [
                  "IPv4"
                ],
                "ip_family_policy": "SingleStack",
                "port": [
                  {
                    "node_port": 0,
                    "port": 5432,
                    "protocol": "TCP",
                    "target_port": "5432"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "app": "postgres"
                },
                "session_affinity": "None",
                "type": "ClusterIP"
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                  }
                ]
              }
            ],
            "wait_for_load_balancer": true
          },
          "dependencies": [
            "aws_iam_role_policy_attachment.eks_cluster_policy",
            "aws_iam_role_policy_attachment.eks_vpc_resource_controller",
            "data.aws_eks_cluster.django_microservice",
            "data.aws_iam_role.eks_cluster"
          ]
        }
      ]
    }
  ]
}